# Performance-Marketing-DecisionEngine

./: .env.example  .gitignore  Expedition_Flow.md  Makefile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
data/mock_csv/: affiliate.csv  competitors.csv  direct_mail.csv  events.csv  google_display.csv  google_pmax.csv  google_search.csv  google_youtube.csv  influencer_campaigns.csv  linkedin_ads.csv  market_trends.csv  meta_ads.csv  mmm_saturation.csv  mta_attribution.csv  ooh.csv  podcast.csv  programmatic.csv  radio.csv  tiktok_ads.csv  tv.csv
data/post_mortems/: incidents.csv
scripts/: generate_mock_data.py  init_vector_store.py
src/: batch.py  graph.py
src/action_layer/: __init__.py
src/action_layer/connectors/: __init__.py  affiliate.py  google_ads.py  linkedin_ads.py  meta_ads.py  offline.py  programmatic.py  tiktok_ads.py
src/action_layer/interfaces/: __init__.py  base.py
src/action_layer/mock/: __init__.py  executor.py
src/data_layer/: __init__.py
src/data_layer/connectors/: bigquery.py  creatoriq.py
src/data_layer/interfaces/: base.py
src/data_layer/mock/: market.py  (+3 more)
src/feedback/: __init__.py
src/intelligence/: models.py
src/nodes/: preflight.py  router.py
src/notifications/: __init__.py  slack.py
src/schemas/: state.py
src/utils/: config.py  logging.py
tests/: test_expedition.py
tests/evals/: eval_actions.py  eval_business.py  eval_config.py  eval_critic.py  eval_diagnosis.py  eval_e2e.py  eval_finops.py  eval_guardrails.py  eval_integration.py  eval_rag.py  eval_robustness.py  eval_router.py  run_evals.py
(+12 files in other folders)
